# 3DGameEngine

./: .gitignore  3DGameEngine.sln  README.md
3DGameEngine/: .clang-format  .gitignore  3DGameEngine.vcxproj  CMakeLists.txt  Standards.txt  application.cpp  application.h  ariallatin.fnt  asset_manager.cpp  asset_manager.h  asset_manager.hpp  baseplate.mesh  camera.cpp  camera.h  collision_system.cpp  collision_system.h  cube.fs  cube.vs  default_fragment.fs  ecs.cpp  ecs.h  editor.cpp  entities.txt  entity.h  events.cpp  fb_fragment_shader.fs  fb_vertex_shader.vs  fshader.fs  imgui.ini  lua_interface.cpp  lua_interface.h  main.cpp  materials.txt  meshes.txt  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h  scene.txt  serialization.h  (+12 more)
3DGameEngine/MeshBinaryConverter/: MeshBinaryConverter.vcxproj  mesh_converter.cpp
3DGameEngine/resources/: cube.mesh
3DGameEngine/scripts/: main.lua
3DGameEngine/src/: application.cpp  application.h  asset_manager.cpp  asset_manager.h  camera.cpp  collision_system.cpp  default_vertex.vs  ecs.cpp  ecs.h  editor.h  events.h  fb_fragment_shader.fs  game.cpp  hot_reload.h  movement_system.cpp  serialization.cpp  sparse_set.h  text.cpp  text.h  text_fragment_shader.fs  text_vertex_shader.vs  window.cpp  window.h
